[package]
name = "ioprio"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs-rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = []
docs = ["iou"]
iou = ["iou_"]

[dependencies]
nix = "0.19"
libc = "0.2"

iou_ = { package = "iou", version = "0.3", optional = true }
