[package]
name = "ioprio"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/4lDO2/ioprio-rs"
documentation = "https://docs.rs/ioprio"
description = "A Linux-only crate for managing I/O priorities"
keywords = ["io", "scheduling", "linux", "io_uring", "syscall"]
categories = ["api-bindings", "os::linux-apis"]
readme = "README.md"
exclude = ["target"]

[package.metadata.docs-rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = []
docs = ["iou"]
iou = ["iou_"]

[dependencies]
nix = "0.19"
libc = "0.2"

iou_ = { package = "iou", version = "0.3", optional = true }
